[package]
name = "bitvector"
version = "0.1.5"
authors = ["Hongjie Zhai <zhaihj@live.jp>"]
description = "BitVector implementation in Rust"
documentation = "http://zhaihj.github.io/doc/bitvector/index.html"
homepage = "https://github.com/zhaihj"
repository = "https://github.com/zhaihj/bitvector"
readme = "Readme.md"
license = "MIT"

[features]
unstable=[]

[dev-dependencies]
rand = "0.7.2"
